# vorpal

./: Cargo.toml  Makefile  README.md  example_project.vor  project.vor
examples/fluidsim/: Cargo.toml  project.vor
examples/fluidsim/.cargo/: config.toml
examples/fluidsim/src/: array2d.rs  fluid.rs  lib.rs
examples/particle-in-a-box/: Cargo.toml
examples/particle-in-a-box/src/: lib.rs
fluidsim/: Cargo.toml  project.vor
fluidsim/src/: lib.rs
vorpal-core/: Cargo.toml
vorpal-core/src/: highlevel.rs  lib.rs  native_backend.rs  ndarray.rs
vorpal-image/: Cargo.toml
vorpal-image/src/: fluid.rs  lib.rs
vorpal-ui/: Cargo.toml
vorpal-ui/src/: app.rs  file_watcher.rs  image_view.rs  lib.rs  main.rs  node_editor.rs  wasmtime_integration.rs
vorpal-wasm/: Cargo.toml
vorpal-wasm-builtins/: Cargo.toml
vorpal-wasm-builtins/src/: lib.rs
vorpal-wasm/examples/: basic.rs
vorpal-wasm/src/: lib.rs  wasmtime_integration.rs
vorpal-widgets/: Cargo.toml
vorpal-widgets/src/: image_view.rs  lib.rs  node_editor.rs
