[package]
name = "vorpal-ui"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.22"
vorpal-core = { path = "../vorpal-core" }
vorpal-wasm = { path = "../vorpal-wasm", features = ["wasmtime"] }
vorpal-widgets = { path = "../vorpal-widgets" }
anyhow = "1.0"
serde = { version = "1.0", optional = true }

[features]
default = []
persistence = ["serde", "vorpal-widgets/persistence", "eframe/persistence"]
