[package]
name = "vorpal-ui"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.23"
vorpal-core = { path = "../vorpal-core" }
vorpal-wasm = { path = "../vorpal-wasm" }
vorpal-widgets = { path = "../vorpal-widgets" }
#wasm-bridge = { git = "https://github.com/kajacx/wasm-bridge.git", branch = "master" }
wasm-bridge = "0.2.2"
anyhow = "1.0"
serde = { version = "1.0" }
bytemuck = "1.14.0"
notify = "6.1.1"
rfd = "0.12.1"
serde_json = "1.0.107"

[features]
default = ["persistence"]
persistence = ["vorpal-widgets/persistence", "eframe/persistence", "vorpal-widgets/persistence", "vorpal-core/persistence"]
