[package]
name = "vorpal-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bridge = { git = "https://github.com/kajacx/wasm-bridge.git", branch = "master" }
vorpal-core = { path = "../vorpal-core" }
wabt = "0.10.0"
anyhow = "1"
